--- a/Resources/Private/Templates/Main.html
+++ b/Resources/Private/Templates/Main.html
@@ -18,17 +18,17 @@
 	<!--empty wrapper /-->
     </div>
     <div id="fulltext-wrapper">
-      <f:cObject typoscriptObjectPath="lib.fulltext" />
+      <f:cObject typoscriptObjectPath="plugin.tx_dlf_fulltexttool" />
       <div id="tx-dlf-fulltextselection"></div>
     </div>
     <div id="search-wrapper">
-      <f:cObject typoscriptObjectPath="lib.search" />
+      <f:cObject typoscriptObjectPath="plugin.tx_dlf_searchindocumenttool" />
     </div>
     <div id="download-wrapper">
       <f:cObject typoscriptObjectPath="lib.download" />
     </div>
     <div id="imagemanipulation-wrapper">
-      <f:cObject typoscriptObjectPath="lib.imagemanipulation" />
+      <f:cObject typoscriptObjectPath="plugin.tx_dlf_imagemanipulationtool" />
     </div>
   </div>
   <div id="main">
