Fix: Use target=_blank for full PDF download link

--- a/Resources/Private/Templates/Toolbox/Main.html
+++ b/Resources/Private/Templates/Toolbox/Main.html
@@ -187,7 +187,7 @@ Base template: Kitodo.Presentation v4.0.0 with data-dic fix
                         <li>
                             <div> <!-- Zeitungsportal -->
                                 <span class="tx-dlf-tools-pdf-work">
-                                    <f:link.external uri="{workLink}">
+                                    <f:link.external uri="{workLink}" target="_blank">
                                         <f:translate key="downloadWork"/> (PDF)
                                     </f:link.external>
                                 </span>
