--- a/Resources/Private/Templates/Toolbox/Main.html
+++ b/Resources/Private/Templates/Toolbox/Main.html
@@ -32,7 +32,7 @@ Base template: Kitodo.Presentation v4.0.0 with data-dic fix
                         <f:variable name="actionUrl" value="{settings.searchUrl}" />
                     </f:then>
                     <f:else>
-                        <f:variable name="actionUrl" value="{f:uri.page(pageUid='{viewData.requestData.pageUid}')}" />
+                        <f:variable name="actionUrl" value="{f:uri.page(pageUid='{viewData.pageUid}')}" />
                     </f:else>
                 </f:if>
                 <form class="tx-dlf-search-form" id="tx-dlf-search-in-document-form" action="{actionUrl}" method="post" enctype="multipart/form-data">
@@ -45,6 +45,7 @@ Base template: Kitodo.Presentation v4.0.0 with data-dic fix
                         <input type="button" id="tx-dlf-search-in-document-button" value="{f:translate(key: 'search.submit')}" onclick="search();" />
                         <input type="hidden" id="tx-dlf-search-in-document-start" name="{searchInDocument.LABEL_START}" value="0" />
                         <input type="hidden" id="tx-dlf-search-in-document-id" name="{searchInDocument.LABEL_ID}" value="{searchInDocument.CURRENT_DOCUMENT}" />
+                        <input type="hidden" id="tx-dlf-search-in-document-pid" name="{searchInDocument.LABEL_PID}" value="{viewData.pageUid}" />
                         <input type="hidden" id="tx-dlf-search-in-document-page" name="{searchInDocument.LABEL_PAGE_URL}" />
                         <input type="hidden" id="tx-dlf-search-in-document-highlight-word" name="{searchInDocument.LABEL_HIGHLIGHT_WORD}" />
                         <input type="hidden" id="tx-dlf-search-in-document-encrypted" name="{searchInDocument.LABEL_ENCRYPTED}" value="{searchInDocument.SOLR_ENCRYPTED}" />
