--- a/Resources/Public/Templates/SearchInDocumentTool.html
+++ b/Resources/Public/Templates/SearchInDocumentTool.html
@@ -8,28 +8,28 @@
  * LICENSE.txt file that was distributed with this source code.
 -->
 
-<!-- Include Fluid namespaces -->
-{namespace f=TYPO3\CMS\Fluid\ViewHelpers}
-
 <form class="tx-dlf-search-form" id="tx-dlf-search-in-document-form" action="{actionUrl}" method="post" enctype="multipart/form-data">
-  <div>
-    <label for="tx-dlf-search-query">{labelQuery}</label>
-    <!-- Never change the @id of this input field! Otherwise search won't work! -->
-    <input type="text" id="tx-dlf-search-in-document-query" placeholder="{labelSearchInDocument}" name="{labelQueryUrl}" />
-    <input type="button" id="tx-dlf-search-in-document-button" value="{labelSubmit}" onclick="search();" />
-    <input type="hidden" id="tx-dlf-search-in-document-start" name="{labelStart}" value="0" />
-    <input type="hidden" id="tx-dlf-search-in-document-id" name="{labelId}" value="{currentDocument}" />
-    <input type="hidden" id="tx-dlf-search-in-document-page" name="{labelPageUrl}" />
-    <input type="hidden" id="tx-dlf-search-in-document-highlight-word" name="{labelHighlightWord}" />
-    <input type="hidden" id="tx-dlf-search-in-document-encrypted" name="{labelEncrypted}" value="{solrEncrypted}" />
-  </div>
+    <div>
+        <label for="tx-dlf-search-query">
+            <f:translate key="search.query"/>
+        </label>
+        <!-- Never change the @id of this input field! Otherwise search won't work! -->
+        <input type="text" id="tx-dlf-search-in-document-query" placeholder="{f:translate(key: 'tools.searchindocument.searchInDocument')}" name="{searchInDocument.labelQueryUrl}" />
+        <input type="button" id="tx-dlf-search-in-document-button" value="{f:translate(key: 'search.submit')}" onclick="search();" />
+        <input type="hidden" id="tx-dlf-search-in-document-start" name="{searchInDocument.labelStart}" value="0" />
+        <input type="hidden" id="tx-dlf-search-in-document-id" name="{searchInDocument.labelId}" value="{searchInDocument.documentId}" />
+        <input type="hidden" id="tx-dlf-search-in-document-pid" name="{searchInDocument.labelPid}" value="{searchInDocument.documentPageId}" />
+        <input type="hidden" id="tx-dlf-search-in-document-page" name="{searchInDocument.labelPageUrl}" />
+        <input type="hidden" id="tx-dlf-search-in-document-highlight-word" name="{searchInDocument.labelHighlightWord}" />
+        <input type="hidden" id="tx-dlf-search-in-document-encrypted" name="{searchInDocument.labelEncrypted}" value="{searchInDocument.solrEncrypted}" />
+    </div>
 </form>
-<div id="tx-dlf-search-in-document-loading" style="display: none;">{labelLoading}...</div>
-<div id="tx-dlf-search-in-document-clearing" onclick="clearSearch();">{labelDeleteSearch}...</div>
+<div id="tx-dlf-search-in-document-loading" style="display: none;"><f:translate key="tools.searchindocument.loading"/>...</div>
+<div id="tx-dlf-search-in-document-clearing" onclick="clearSearch();"><f:translate key="tools.searchindocument.deleteSearch"/>...</div>
 <div id="tx-dlf-search-in-document-results"></div>
 <div id="tx-dlf-search-in-document-labels" style="display:none;">
-    <span id="tx-dlf-search-in-document-label-next">{labelNext}</span>
-    <span id="tx-dlf-search-in-document-label-previous">{labelPrevious}</span>
-    <span id="tx-dlf-search-in-document-label-page">{labelPage}</span>
-    <span id="tx-dlf-search-in-document-label-noresult">{labelNoResult}</span>
+    <span id="tx-dlf-search-in-document-label-next"><f:translate key="tools.searchindocument.next"/></span>
+    <span id="tx-dlf-search-in-document-label-previous"><f:translate key="tools.searchindocument.previous"/></span>
+    <span id="tx-dlf-search-in-document-label-page"><f:translate key="search.logicalPage"/></span>
+    <span id="tx-dlf-search-in-document-label-noresult"><f:translate key="tools.searchindocument.noresult"/></span>
 </div>
