add translation for pagination "page" text in PageGrid template

--- a/Resources/Private/Templates/PageGrid/Main.html
+++ b/Resources/Private/Templates/PageGrid/Main.html
@@ -41,7 +41,7 @@ Base template: Kitodo.Presentation v5.0.1
                             </f:if>
                         </f:link.page>
                     </div>
-                    <div class="tx-dlf-pagegrid-pagination">{entry.pagination}</div>
+                    <div class="tx-dlf-pagegrid-pagination">{f:translate(key: 'page')} {entry.pagination}</div>
                 </li>
             </f:for>
         </ol>
