fix incorrect use of label's for attribute

--- a/Resources/Private/Templates/Toolbox/Main.html
+++ b/Resources/Private/Templates/Toolbox/Main.html
@@ -37,7 +37,7 @@ Base template: Kitodo.Presentation v5.0.6 with data-dic fix
                 </f:if>
                 <form class="tx-dlf-search-form" id="tx-dlf-search-in-document-form" action="{actionUrl}" method="post" enctype="multipart/form-data">
                     <div>
-                        <label for="tx-dlf-search-query">
+                        <label for="tx-dlf-search-in-document-query">
                             <f:translate key="search.query"/>
                         </label>
                         <!-- Never change the @id of this input field! Otherwise search won't work! -->
