--- a/Resources/Private/Templates/Toolbox/Main.html
+++ b/Resources/Private/Templates/Toolbox/Main.html
@@ -90,10 +90,12 @@ Base template: Kitodo.Presentation v5.0.6 with data-dic fix
                 <f:if condition="{renderImageManipulationTool}">
                     <f:then>
                         <li>
-                            <span class="tx-dlf-tools-imagetools" id="tx-dlf-tools-imagetools"
-                                    data-dic="imagemanipulation-on:{f:translate(key: 'tools.imagemanipulation.on')};imagemanipulation-off:{f:translate(key: 'tools.imagemanipulation.off')};reset:{f:translate(key: 'tools.imagemanipulation.reset')};saturation:{f:translate(key: 'tools.imagemanipulation.saturation')};hue:{f:translate(key: 'tools.imagemanipulation.hue')};contrast:{f:translate(key: 'tools.imagemanipulation.contrast')};brightness:{f:translate(key: 'tools.imagemanipulation.brightness')};invert:{f:translate(key: 'tools.imagemanipulation.invert')};parentContainer:{parentContainer}"
-                                    title="{f:translate(key: 'tools.imagemanipulation.no-support')}">
-                            </span>
+                            <div class="tx-dlf-imagemanipulationtool">
+                                <span class="tx-dlf-tools-imagetools" id="tx-dlf-tools-imagetools"
+                                        data-dic="imagemanipulation-on:{f:translate(key: 'tools.imagemanipulation.on')};imagemanipulation-off:{f:translate(key: 'tools.imagemanipulation.off')};reset:{f:translate(key: 'tools.imagemanipulation.reset')};saturation:{f:translate(key: 'tools.imagemanipulation.saturation')};hue:{f:translate(key: 'tools.imagemanipulation.hue')};contrast:{f:translate(key: 'tools.imagemanipulation.contrast')};brightness:{f:translate(key: 'tools.imagemanipulation.brightness')};invert:{f:translate(key: 'tools.imagemanipulation.invert')};parentContainer:{parentContainer}"
+                                        title="{f:translate(key: 'tools.imagemanipulation.no-support')}">
+                                </span>
+                            </div>
                         </li>
                     </f:then>
                 </f:if>
